# SCARF

./: .gitignore  CMakeLists.txt  README.md  build.ps1  clean.ps1  conanfile.txt  format.ps1  make.ps1  run.ps1  test.ps1
.github/workflows/: windows-build.yml  windows-test.yml
examples/: config.txt  example_fluid.mov  gradient.mov  reference.mov
lib/: CMakeLists.txt  alternator.hpp  animation.hpp  array.tpp  bbox.hpp  color.hpp  matrix.hpp  mov.cpp  mov.hpp  sph.cpp  sph.hpp
lib/common/: CMakeLists.txt  bbox.hpp  config.hpp  grid.hpp  kernel.cpp  kernel.hpp  pixel.hpp  vector.hpp
lib/dispatch/: CMakeLists.txt  animation.hpp  gif.cpp  gif.hpp  mov.cpp  mov.hpp
lib/model/: CMakeLists.txt  dynamics.cpp  dynamics.hpp  hash.cpp  hash.hpp  state.cpp  state.hpp  step.cpp  step.hpp
lib/parse/: CMakeLists.txt  parse.cpp  parse.hpp
lib/parser/: CMakeLists.txt  parse.cpp  parse.hpp
lib/render/: CMakeLists.txt  color.hpp  matrix.hpp  render.cpp  render.hpp  rendering.tpp  scene.hpp
lib/renderer/: CMakeLists.txt  array.tpp  color.hpp  grid.hpp  matrix.hpp  pixel.hpp  render.cpp  render.hpp  rendering.tpp  scene.hpp
src/: CMakeLists.txt  animation.hpp  array.hpp  array.tpp  bbox.hpp  black_box.cpp  blackbox.cpp  blackbox.hpp  cli.cpp  cli.hpp  color.hpp  grid.hpp  main.c  main.cpp  matrix.hpp  mov.cpp  mov.h  mov.hpp  pixel.h  pixel.hpp  rendering.tpp  sph.cpp  sph.hpp  state.h  three_body.cpp  three_body.hpp  vector.hpp
tests/: CMakeLists.txt  test_dispatch.cpp  test_examples.cpp  test_model.cpp  test_parse.cpp  test_parser.cpp  test_scarf.cpp
tools/: CMakeLists.txt  driver.cpp
